Fixed scrollbar resizing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
     --color-dnb: #c9c7c3;
     --color-bekk: #979590;
 }
-/* faen */
+
 html {
     font-family: IBM Plex Sans;
     background-color: var(--background);
@@ -20,6 +20,7 @@ html {
 body {
     margin: 0px;
     width: 100%;
+    overflow-y: scroll;
 }
 
 a {
